--- a/css/gomoku.css
+++ b/css/gomoku.css
@@ -160,11 +160,13 @@ header select {
 }
 
 .stone.black {
-    background: radial-gradient(circle at 30% 30%, #444, #000);
+    background: radial-gradient(circle at 30% 30%, #666, #000);
+    box-shadow: 0 0 3px #fff, 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .stone.white {
-    background: radial-gradient(circle at 30% 30%, #fff, #ccc);
+    background: radial-gradient(circle at 30% 30%, #fff, #999);
+    box-shadow: 0 0 3px #000, 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 .stone.last-move {
